[FO] Fix wrong z-index on figcaption

--- a/resources/assets/styles/base/_generic.scss
+++ b/resources/assets/styles/base/_generic.scss
@@ -43,6 +43,7 @@ figure {
 }
 
 figcaption {
+    z-index: 1;
     position: absolute;
     bottom: 0;
     left: 0;
